convert homebrew testing to sbt-scripted