@@ -8,11 +8,17 @@ import sbt._
 import sbt.Keys._
 import sbt.ScriptedPlugin._
 import scalariform.formatter.preferences._
+import util.Properties
 
 object EnsimeSbtBuild extends Build {
 
+  if (!sys.env.contains("JDK_LANGTOOLS_SRC"))
+    throw new IllegalArgumentException(
+      // e.g. one of src/sbt-test/ensime-sbt/ensime-server/openjdk-langtools
+      s"ensime-sbt requires the environment variable JDK_LANGTOOLS_SRC"
+    )
+
   override val settings = super.settings ++ Seq(
-    name := "ensime-sbt",
     organization := "org.ensime",
     version := "0.3.0-SNAPSHOT",
     scalaVersion := "2.10.6",
@@ -21,20 +27,22 @@ object EnsimeSbtBuild extends Build {
       "-encoding", "UTF-8", "-target:jvm-1.6", "-feature", "-deprecation",
       "-Xfatal-warnings",
       "-language:postfixOps", "-language:implicitConversions"
-    ),
-    ScalariformKeys.preferences := FormattingPreferences().setPreference(AlignSingleLineCaseStatements, true)
+    )
   ) ++ sonatype("ensime", "ensime-sbt", BSD3)
 
   lazy val root = (project in file(".")).
     enablePlugins(SbtScalariform).
     settings(scriptedSettings).
     settings(
+      name := "ensime-sbt",
       sbtPlugin := true,
       // intentionally old version of scalariform: do not force an upgrade upon users
       libraryDependencies += "org.scalariform" %% "scalariform" % "0.1.4",
+      ScalariformKeys.preferences := FormattingPreferences().setPreference(AlignSingleLineCaseStatements, true),
       scriptedLaunchOpts := Seq(
         "-Dplugin.version=" + version.value,
-        "-Dsbt.task.timings=true"
+        // .jvmopts is ignored, simulate here
+        "-XX:MaxPermSize=256m", "-Xmx2g", "-Xss2m"
       ),
       scriptedBufferLog := false
     )
